Style: Page not found styled

--- a/src/Assets/DarkMode.css
+++ b/src/Assets/DarkMode.css
@@ -65,3 +65,7 @@ color:#fff
   background-color: #A78BFA;
   color: #000;
  }
+#dark #contact-info{
+  background-color: #02162A;
+  color: #fff;
+}
