--- a/src/Assets/DarkMode.css
+++ b/src/Assets/DarkMode.css
@@ -87,3 +87,11 @@ color:#fff
   background-color: #333;
   color: #fff;
 }
+@media screen and (max-width: 765px) {
+  #slider-heading {
+    font-size: x-large;
+  }
+  #slider-text{
+    font-size: larger;
+  }
+}
